SASS: rajouté pour la génération de memory.css

--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Memory</title>
+	<!-- Ceci est un commentaire HTML.
+		Nous l'utiliserons pour détailler notre code HTML. -->
+	<title>Memory</title> <!-- Modifie le titre de l'onglet du navigateur -->
+
+	<!-- Feuille de style à utiliser pour la mise en forme -->
 	<link rel="stylesheet" href="memory.css">
 </head>
 <body>
 
+	<!-- Les sections permettent, comme leur nom l'indique de découper la page
+		en plusieurs espace spécifiques. L'espace qui suit sera l'entête. -->
 	<section id="entete">
 		<h1>Jeu de memory</h1>
 		<p>Ceci <strong>deviendra</strong> un jeu de Memory.</p>
 	</section>
 
-<!-- On affiche les 18 images de fruits que nous avons -->
-<section id="principale">
-	<article id="image1" class="carte"></article>
-	<article id="image2" class="carte"></article>
-	<article id="image3" class="carte"></article>
-	<article id="image4" class="carte"></article>
-	<article id="image5" class="carte"></article>
-	<article id="image6" class="carte"></article>
-	<article id="image7" class="carte"></article>
-	<article id="image8" class="carte"></article>
-	<article id="image9" class="carte"></article>
-	<article id="image10" class="carte"></article>
-	<article id="image11" class="carte"></article>
-	<article id="image12" class="carte"></article>
-	<article id="image13" class="carte"></article>
-	<article id="image14" class="carte"></article>
-	<article id="image15" class="carte"></article>
-	<article id="image16" class="carte"></article>
-	<article id="image17" class="carte"></article>
-	<article id="image18" class="carte"></article>
-</section>
+	<!-- Notre section principale de travail : pour le tableau des scores, ou
+		encore pour le plateau de jeu.
+		On affiche les 18 images de fruits que nous avons -->
+	<section id="principale">
+		<article id="image1" class="carte"></article>
+		<article id="image2" class="carte"></article>
+		<article id="image3" class="carte"></article>
+		<article id="image4" class="carte"></article>
+		<article id="image5" class="carte"></article>
+		<article id="image6" class="carte"></article>
+		<article id="image7" class="carte"></article>
+		<article id="image8" class="carte"></article>
+		<article id="image9" class="carte"></article>
+		<article id="image10" class="carte"></article>
+		<article id="image11" class="carte"></article>
+		<article id="image12" class="carte"></article>
+		<article id="image13" class="carte"></article>
+		<article id="image14" class="carte"></article>
+		<article id="image15" class="carte"></article>
+		<article id="image16" class="carte"></article>
+		<article id="image17" class="carte"></article>
+		<article id="image18" class="carte"></article>
+	</section>
 
 </body>
 </html>
