Avancement de la partie : avec une barre de progression
* ajout d'une alerte quand la partie est achevée
* barre de progression qui avance suivant le temps restant

--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
 		en plusieurs espace spécifiques. L'espace qui suit sera l'entête. -->
 	<section id="entete">
 		<h1>Jeu de memory</h1>
-		<p>Ceci <strong>deviendra</strong> un jeu de Memory.</p>
+		<p>Ceci <strong>devient</strong> un jeu de Memory.</p>
 	</section>
 
 	<!-- Notre section principale de travail : pour le tableau des scores, ou
 		encore pour le plateau de jeu.
 		Notre code Javascript ajoutera les cartes de jeu. -->
 	<section id="principale">
+	</section>
+
+	<!-- Progression de la partie -->
+	<section id="partie">
+		<p id="chrono"></p>
 	</section>
 
 </body>
